--- a/SDD_P02_Group1/appsettings.json
+++ b/SDD_P02_Group1/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "MoolahConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MoolahDB;Integrated Security=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
